--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,48 @@
-body {
+<style>
+  *{
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    background-color: #000;
-}
-
-#fireworksCanvas {
+  }
+  #contain {
+    width: 500px;
+    height: 480px;
+    margin: 0 auto;
+    margin-top: 100px;
+  }
+  #box {
+    width: 500px;
+    height: 400px;
+    margin: 0 auto;
+    /* 子绝父相 */
+    position:relative ;
+    border: 1px solid #ccc;
+  }
+  .board {
+    width: 100px;
+    height: 10px;
+    background-color: black;
+    /* 子绝父相 */
+    position:absolute;
+    /* board水平居中 */
+    left:200px;
+    top: 80%;
+  }
+  .ball {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: coral;
+    /* 子绝父相 */
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+    left:242px;
+    top:76%;
+  }
+  button {
+    width: 100px;
+    background-color: dodgerblue;
+    border-radius: 10%;
+    color: white;
+    padding: 4px 0;
+    margin: 5px 0;
+  }
+</style>
